modified:   countUniqueValues.js

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <h1>O.O.P: Object Oriented Programming</h1>
     </div>
   </body>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+  <script type="module" src="search/radixSort.js"></script>
 </html>
