--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSnA</title>
+    <style>
+      body {
+        background-color: cadetblue;
+        background: linear-gradient(
+            217deg,
+            rgba(131, 78, 78, 0.8),
+            rgba(255, 0, 0, 0) 70.71%
+          ),
+          linear-gradient(
+            127deg,
+            rgba(99, 131, 99, 0.8),
+            rgba(0, 255, 0, 0) 70.71%
+          ),
+          linear-gradient(
+            336deg,
+            rgba(0, 0, 255, 0.8),
+            rgba(0, 0, 255, 0) 70.71%
+          );
+      }
+      .title {
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: auto;
+      }
+      .title h1 {
+        color: bisque;
+        font-size: 2em;
+        font-family: "Press Start 2P", cursive;
+      }
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,5 +52,5 @@
     </div>
   </body>
   <!-- <script src="script.js"></script> -->
-  <script type="module" src="search/radixSort.js"></script>
+  <script type="module" src="prototypes/example.js"></script>
 </html>
